--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <button class="dif" onclick="anotherDate()">Data diferente</button>
 
       <p class="output"></p>
+      <br />
+      <button class="dif" onclick="copyToClipboard()">Copy to Clipboard</button>
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
@@ -37,5 +39,6 @@
       dayjs().format();
     </script>
     <script src="src/scripts/index.js"></script>
+    <script src="src//scripts/copy.js"></script>
   </body>
 </html>
