--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
       <p class="output"></p>
       <br />
-      <button class="dif" onclick="copyToClipboard()">Copy to Clipboard</button>
+      <button class="dif" onclick="copyToClipboard(calculate())">
+        Copy to Clipboard
+      </button>
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
