setup hardcore mode

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button class="dif" onclick="anotherDate()">Data diferente</button>
 
       <p class="output"></p>
+      <p class="events"></p>
       <br />
       <button class="dif" onclick="copyToClipboard(calculate())">
         Copy to Clipboard
@@ -40,7 +41,8 @@
     <script>
       dayjs().format();
     </script>
+    <script src="src/scripts/hardcore-mode.js"></script>
     <script src="src/scripts/index.js"></script>
-    <script src="src//scripts/copy.js"></script>
+    <script src="src/scripts/copy.js"></script>
   </body>
 </html>
