hardcode mode update

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <center>
       <h1>BLACK 👍</h1>
 
+      <button class="dif hcBtn" onclick="switchHardcodeMode()"></button
+      ><br /><br />
       <button onclick="black()">Black 👍</button> -
       <button onclick="calculate()">Calculate 👍</button><br /><br />
       <button class="dif" onclick="anotherDate()">Data diferente</button>
