hardcode mode update

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <center>
       <h1>BLACK 👍</h1>
 
-      <button class="dif hcBtn" onclick="switchHardcodeMode()"></button
+      <button class="dif hcBtn" onclick="switchHardcodeMode()">
+        Carregando modo de jogo...</button
       ><br /><br />
       <button onclick="black()">Black 👍</button> -
       <button onclick="calculate()">Calculate 👍</button><br /><br />
