hardcode mode update

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       <p class="events"></p>
       <br />
       <button class="dif" onclick="copyToClipboard(calculate())">
-        Copy to Clipboard
-      </button>
+        Copy to Clipboard</button
+      ><br /><br />
+      DEV: <a href="https://www.instagram.com/luiz_davi_freitas/">Luiz Davi</a>
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
