--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
       <button class="dif" onclick="copyToClipboard(calculate())">
         Copy to Clipboard</button
       ><br /><br />
-      DEV: <a href="https://www.instagram.com/luiz_davi_freitas/">Luiz Davi</a>
+      DEV: <a href="https://www.instagram.com/luiz_davi_freitas/">Luiz Davi</a
+      ><br /><br />
+      <a href="/src/rules/index.html">Regras do jogo</a>
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
