--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       ><br /><br />
       DEV: <a href="https://www.instagram.com/luiz_davi_freitas/">Luiz Davi</a
       ><br /><br />
-      <a href="/src/rules/index.html">Regras do jogo</a>
+      <a href="rules.html">Regras do jogo</a>
     </center>
 
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
