hardcore mode update

--- a/rules.html
+++ b/rules.html
@@ -77,8 +77,9 @@
       <h2>Como ativar?</h2>
 
       <p>
-        O hardcore mode por pardrão começa desligado e você consegue ativar e
-        desativar ele quando quiser clicando no botão.
+        O hardcore mode por pardrão começa desligado e você consegue ativar
+        clicando no botão, mas cuidado, após ativar, você não conseguirá voltar
+        ao modo normal.
       </p>
       <br />
 
